parser/src/snapshots/rustpython_parser__fstring__tests__fstring_parse_selfdocumenting_format.snap
---
source: parser/src/fstring.rs
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
    },
    custom: (),
    node: JoinedStr {
        values: [
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "user=",
                    ),
                    kind: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "",
                    ),
                    kind: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 2,
                        },
                        custom: (),
                        node: Name {
                            id: "user",
                            ctx: Load,
                        },
                    },
                    conversion: None,
                    format_spec: Some(
                        Located {
                            location: Location {
                                row: 0,
                                column: 0,
                            },
                            custom: (),
                            node: JoinedStr {
                                values: [
                                    Located {
                                        location: Location {
                                            row: 0,
                                            column: 0,
                                        },
                                        custom: (),
                                        node: Constant {
                                            value: Str(
                                                ">10",
                                            ),
                                            kind: None,
                                        },
                                    },
                                ],
                            },
                        },
                    ),
                },
            },
        ],
    },
}
