parser/src/snapshots/rustpython_parser__fstring__tests__parse_empty_fstring.snap
---
source: parser/src/fstring.rs
expression: "parse_fstring(\"\").unwrap()"
---
Located {
    location: Location {
        row: 0,
        column: 0,
    },
    custom: (),
    node: Constant {
        value: Str(
            "",
        ),
        kind: None,
    },
}
