parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_equals.snap
---
source: parser/src/fstring.rs
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
    },
    custom: (),
    node: JoinedStr {
        values: [
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 5,
                        },
                        custom: (),
                        node: Compare {
                            left: Located {
                                location: Location {
                                    row: 1,
                                    column: 2,
                                },
                                custom: (),
                                node: Constant {
                                    value: Int(
                                        42,
                                    ),
                                    kind: None,
                                },
                            },
                            ops: [
                                Eq,
                            ],
                            comparators: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 8,
                                    },
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            42,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                    },
                    conversion: None,
                    format_spec: None,
                },
            },
        ],
    },
}
