parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_yield_expr.snap
---
source: parser/src/fstring.rs
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
    },
    custom: (),
    node: JoinedStr {
        values: [
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 2,
                        },
                        custom: (),
                        node: Yield {
                            value: None,
                        },
                    },
                    conversion: None,
                    format_spec: None,
                },
            },
        ],
    },
}
